# advocate

./: .env.example  .gitignore  AGENTS.md  Makefile  alembic.ini  architecture.md  case_requirements.yaml  docker-compose.yml  implementation_plan.md  pyproject.toml  requirements_original.txt  schema.md
apps/api/: main.py
apps/worker/: main.py
docs/: architecture_diagram.md
infra/migrations/: env.py
infra/migrations/versions/: 0001_create_all_tables.py  0002_add_immutable_table_guards.py
specs/: evidence_taxonomy.md  observations.md  scenario_vision.md  state_machine.md
src/advocate/: config.py
src/advocate/domain/: __init__.py  models.py
src/advocate/ingestion/: __init__.py  events.py  hashing.py  router.py  storage.py
src/advocate/processing/: flows.py
src/advocate/storage/: __init__.py  audit.py  db.py  orm.py  repositories.py
tests/: conftest.py
tests/integration/: test_immutable_tables.py  test_ingestion_api.py  test_migrations.py  test_noop_flow.py  test_repositories_core.py
tests/scenarios/fixtures/conflicting_compensation_offer/: scenario.yaml
tests/scenarios/fixtures/conflicting_compensation_offer/evidence/: application_confirmation.eml  formal_offer_letter.txt  job_posting.txt  phone_screen_notes.txt  verbal_offer_note.txt
tests/scenarios/fixtures/intake_missing_quantified_impact/: scenario.yaml
tests/scenarios/fixtures/intake_missing_quantified_impact/evidence/: job_posting.txt
tests/scenarios/fixtures/stale_follow_up_after_application/: scenario.yaml
tests/scenarios/fixtures/stale_follow_up_after_application/evidence/: application_confirmation.eml  job_posting.txt
tests/unit/: test_config.py  test_domain_models.py  test_ingestion_events.py  test_ingestion_hashing.py  test_ingestion_validation.py
