[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advocate"
version = "0.1.0"
description = "Local job-search case engine modeled after disability advocacy platforms"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Data validation and settings
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.5",

    # Object storage (S3-compatible / MinIO)
    "boto3>=1.34.0",

    # Orchestration
    "prefect>=3.0.0",

    # LLM — use openai SDK directly, not langchain
    "openai>=1.30.0",
    "tiktoken>=0.7.0",

    # Embeddings
    "sentence-transformers>=3.0.0",

    # OCR
    "pytesseract>=0.3.10",
    "pillow>=10.3.0",
    "pypdf>=4.2.0",

    # Configuration
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",

    # Redis (ephemeral coordination only, not truth)
    "redis>=5.0.0",

    # Utilities
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.0",
    "types-boto3>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "PT", "RET", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/advocate"]
